# ClueScan

./: .gitignore  README.md  cluescan.yaml.example  pyproject.toml
docs/: agent-rules.md
scripts/: seed_test_repo.py
skills/security-review/: SKILL.md
src/cluescan/: __init__.py  cli.py  pipeline.py
src/cluescan/analysis/: __init__.py  analyzers.py  prompts.py  verifier.py
src/cluescan/config/: __init__.py  settings.py
src/cluescan/context/: __init__.py  explorer.py  languages.py  parser.py  regions.py  symbols.py
src/cluescan/dedup/: __init__.py  semantic.py
src/cluescan/lifecycle/: __init__.py  autoclose.py
src/cluescan/llm/: __init__.py  client.py
src/cluescan/mcp_server/: __init__.py  server.py
src/cluescan/models/: __init__.py
src/cluescan/review_center/: __init__.py  app.py  store.py
src/cluescan/review_center/web/: index.html
src/cluescan/store/: __init__.py  local.py
src/cluescan/sync/: __init__.py  client.py
src/cluescan/vcs/: __init__.py  diff.py
tests/: test_debounce.py  test_e2e.py  test_region_errors.py
