[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cluescan"
version = "0.1.0"
description = "ClueScan — AI-native shift-left security review (local MCP execution core + Review Center middle platform)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ClueScan" }]
dependencies = [
    "mcp>=1.2",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-go>=0.23",
    "click>=8.1",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "anyio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
cluescan = "cluescan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
